création page des évènements
création de la deuxième page de l'association liée aux évènements

--- a/association.html
+++ b/association.html
@@ -19,6 +19,7 @@
                 <li><a href="#">Nos missions</a></li>
                 <li><a href="#">Je m'engage</a></li>
                 <li><a href="#">Faire un don</a></li>
+                <li><a href="page2.html">Évènements</a></li>
                 <li><a href="#">À propos</a></li>
                 <li><a href="#">Contact</a></li>
                 
@@ -36,7 +37,8 @@
 
         <h2>À la une</h2>
         <div class="headlines">
-            <a><img class="image5" src="paris.jpg"></a>
+            <a><img class="image5" src="paris.jpg"></a> 
+            <!--source image :archzine.fr-->
             <h4 class="headlines-title">8 000 décès liés à la pollution de l'air pourraient être évités</h4>
             <p class="headlines-text">D'après une étude d'AirParif et de l'ORS, en 2019, 6220 décès sont liés à une exposition prolongée aux particules fines. Un chiffre en baisse par rapport à 2010.
                 Des améliorations qui restent insuffisantes. Dans une étude dévoilée ce jeudi, l'organisme en charge de la surveillance de la qualité de l'air AirParif et l'Observatoire régional de santé (ORS) d'Île-de-France reviennent sur l'impact de la pollution de l'air sur le taux de mortalité de la région.
@@ -105,6 +107,7 @@
                 <ul class="second-list">
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Bénévolat</a></li>
+                    <li><a href="page2.html">Évènements</a></li>
                     <li><a href="#">Emplois/stages</a></li>
                 </ul>
             </ul>
